[package]
name = "kepler"
version = "3.1.1"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler"
keywords = [ "crypto", "kepler", "keplernetwork" ]
readme = "README.md"
exclude = ["**/*.kepler", "**/*.kepler2"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["api", "chain", "config", "core", "keychain", "p2p", "servers", "store", "util", "pool"]
exclude = ["etc/gen_gen"]

[[bin]]
name = "kepler"
path = "src/bin/kepler.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.4"
clap = { version = "2.31", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
humansize = "1.1.0"
serde = "1"
serde_json = "1"
log = "0.4"
term = "0.5"
failure = "0.1"
failure_derive = "0.1"

kepler_api = { path = "./api", version = "3.1.0" }
kepler_config = { path = "./config", version = "3.1.0" }
kepler_chain = { path = "./chain", version = "3.1.0" }
kepler_core = { path = "./core", version = "3.1.0" }
kepler_keychain = { path = "./keychain", version = "3.1.0" }
kepler_p2p = { path = "./p2p", version = "3.1.0" }
kepler_servers = { path = "./servers", version = "3.1.0" }
kepler_util = { path = "./util", version = "3.1.0" }

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.12", default-features = false, features = ["pancurses-backend"] }
[target.'cfg(windows)'.dependencies.pancurses]
version = "0.16.0"
features = ["win32"]
[target.'cfg(unix)'.dependencies]
cursive = "0.12"

[build-dependencies]
built = "0.3"

[dev-dependencies]
kepler_chain = { path = "./chain", version = "3.1.0" }
kepler_store = { path = "./store", version = "3.1.0" }
