[package]
name = "kepler_config"
version = "1.1.0-beta.2"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Configuration for kepler, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler"
keywords = [ "crypto", "kepler", "keplernetwork" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

kepler_core = { path = "../core", version = "1.1.0-beta.2" }
kepler_servers = { path = "../servers", version = "1.1.0-beta.2" }
kepler_p2p = { path = "../p2p", version = "1.1.0-beta.2" }
kepler_util = { path = "../util", version = "1.1.0-beta.2" }

[dev-dependencies]
pretty_assertions = "0.5.1"
