[package]
name = "kepler_core"
version = "3.1.0-beta.1"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Chain implementation for kepler, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler"
keywords = [ "crypto", "kepler", "keplernetwork" ]
workspace = ".."
edition = "2018"

[dependencies]
blake2 = { package = "blake2-rfc", version = "0.2"}
byteorder = "1"
croaring = "0.3.9"
enum_primitive = "0.1"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1"
lru-cache = "0.1"
num = "0.2"
num-bigint = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
siphasher = "0.2"
uuid = { version = "0.6", features = ["serde", "v4"] }
log = "0.4"
chrono = { version = "0.4.4", features = ["serde"] }
zeroize = "0.9"

keychain = { path = "../keychain", version = "3.1.0-beta.1", package="kepler_keychain" }
util = { path = "../util", version = "3.1.0-beta.1", package="kepler_util" }

[dev-dependencies]
serde_json = "1"