[package]
name = "kepler_p2p"
version = "1.1.0-beta.2"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Chain implementation for kepler, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler"
keywords = [ "crypto", "kepler", "keplernetwork" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
bytes = "0.4"
enum_primitive = "0.1"
net2 = "0.2"
num = "0.1"
rand = "0.5"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = { version = "0.4.4", features = ["serde"] }

kepler_core = { path = "../core", version = "1.1.0-beta.2" }
kepler_store = { path = "../store", version = "1.1.0-beta.2" }
kepler_chain = { path = "../chain", version = "1.1.0-beta.2" }
kepler_util = { path = "../util", version = "1.1.0-beta.2" }

[dev-dependencies]
kepler_pool = { path = "../pool", version = "1.1.0-beta.2" }
