[package]
name = "kepler_pool"
version = "1.0.2"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Chain implementation for kepler, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler"
keywords = [ "crypto", "kepler", "keplernetwork" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.5"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = "0.4.4"
failure = "0.1"
failure_derive = "0.1"

kepler_core = { path = "../core", version = "1.0.2" }
kepler_keychain = { path = "../keychain", version = "1.0.2" }
kepler_store = { path = "../store", version = "1.0.2" }
kepler_util = { path = "../util", version = "1.0.2" }

[dev-dependencies]
kepler_chain = { path = "../chain", version = "1.0.2" }
