[package]
name = "kepler_servers"
version = "1.0.3"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler"
keywords = [ "crypto", "kepler", "keplernetwork" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.12"
fs2 = "0.4"
futures = "0.1"
http = "0.1"
hyper-staticfile = "0.3"
itertools = "0.7"
lmdb-zero = "0.4.4"
rand = "0.5"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.4"
bufstream = "~0.1"
jsonrpc-core = "~8.0"

kepler_api = { path = "../api", version = "1.0.3" }
kepler_chain = { path = "../chain", version = "1.0.3" }
kepler_core = { path = "../core", version = "1.0.3" }
kepler_keychain = { path = "../keychain", version = "1.0.3" }
kepler_p2p = { path = "../p2p", version = "1.0.3" }
kepler_pool = { path = "../pool", version = "1.0.3" }
kepler_store = { path = "../store", version = "1.0.3" }
kepler_util = { path = "../util", version = "1.0.3" }
kepler_wallet = { path = "../wallet", version = "1.0.3" }

[dev-dependencies]
blake2-rfc = "0.2"
