[package]
name = "kepler_util"
version = "1.0.3"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler"
keywords = [ "crypto", "kepler", "keplernetwork" ]
workspace = ".."
edition = "2018"

[dependencies]
backtrace = "0.3"
base64 = "0.9"
byteorder = "1"
lazy_static = "1"
rand = "0.5"
serde = "1"
serde_derive = "1"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
walkdir = "2"
zip = { version = "0.4", default-features = false }
parking_lot = {version = "0.6"}
zeroize = "0.5.2"

[dependencies.grin_secp256k1zkp]
#git = "https://github.com/keplernetwork/rust-secp256k1-zkp"
#tag = "kepler_integration_29"
#path = "../../rust-secp256k1-zkp"
version = "0.7.4"
features = ["bullet-proof-sizing"]
