[package]
name = "kepler_wallet"
version = "1.0.3"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler"
keywords = [ "crypto", "kepler", "keplernetwork" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.12"
prettytable-rs = "0.7"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
term = "0.5"
tokio = "= 0.1.11"
tokio-core = "0.1"
tokio-retry = "0.1"
ring = "0.13"
uuid = { version = "0.6", features = ["serde", "v4"] }
url = "1.7.0"
chrono = { version = "0.4.4", features = ["serde"] }

kepler_api = { path = "../api", version = "1.0.3" }
kepler_core = { path = "../core", version = "1.0.3" }
kepler_keychain = { path = "../keychain", version = "1.0.3" }
kepler_store = { path = "../store", version = "1.0.3" }
kepler_util = { path = "../util", version = "1.0.3" }
kepler_chain = { path = "../chain", version = "1.0.3" }

[dev-dependencies]
kepler_store = { path = "../store", version = "1.0.3" }
