[package]
name = "kepler_gen_gen"
version = "0.0.1"
edition = "2018"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Utility to automate the generation of Kepler's genesis block"
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler"
keywords = [ "crypto", "kepler", "keplernetwork" ]
readme = "README.md"

[[bin]]
name = "gen_gen"
path = "src/bin/gen_gen.rs"

[dependencies]
chrono = "0.4.4"
cuckoo_miner = "1.0.0"
curl = "0.4.19"
kepler_core = { path = "../../core" }
kepler_chain = { path = "../../chain" }
kepler_keychain = { path = "../../keychain" }
kepler_miner_plugin = "1.0.0"
kepler_store = { path = "../../store" }
kepler_util = { path = "../../util" }
kepler_wallet = { path = "../../wallet" }
rpassword = "2.0.0"
serde_json = "1"

[patch.crates-io]
kepler_api = { path = "../../api" }
kepler_core = { path = "../../core" }
kepler_chain = { path = "../../chain" }
kepler_keychain = { path = "../../keychain" }
kepler_util = { path = "../../util" }
kepler_wallet = { path = "../../wallet" }
